src/Resource/Resource_ConvertUnicode.c
@@ -20,8 +20,8 @@
 
 typedef unsigned short char16 ;
 
-#include <Resource_Shiftjis.h>
-#include <Resource_GB2312.h>
+#include "Resource_Shiftjis.pxx"
+#include "Resource_GB2312.pxx"
 
 #define isjis(c) (((c)>=0x21 && (c)<=0x7e))
 #define iseuc(c) (((c)>=0xa1 && (c)<=0xfe))
